# weather-calibration

./: .gitignore  README.md  pyproject.toml
data/: README.md
reports/: README.md
src/weather_calibration/: __init__.py  __main__.py  cli.py  features.py  modeling.py  pipeline.py  synthetic.py
tests/: test_modeling.py  test_pipeline.py  test_synthetic.py
