[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-calibration-portfolio"
version = "0.1.0"
description = "Sanitized weather forecast calibration pipeline using synthetic data"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
weather-calibration = "weather_calibration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
